--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -26,3 +26,7 @@ sitemap: false
 @import "vendor/font-awesome/font-awesome";
 @import "vendor/magnific-popup/magnific-popup";
 //@import "vendor/google/fonts";
+
+body {
+  font-size: larger;
+}
